Add more structure to theory

--- a/src/slides/methods/evaluating-ml-algorithms.qmd
+++ b/src/slides/methods/evaluating-ml-algorithms.qmd
@@ -224,7 +224,10 @@ A predictive problem is defined by
 evaluation
 
 
-#### Regression
+#### Other Metrics
+
+
+### Simulations vs. Using Real Data {background="#43464B"}
 
 
 #### Simulations vs. Evaluation on Real Data
